--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,98 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+header {
+  margin-top: 1rem;
+  width: 100%;
+  height: 15vh;
+}
+
+.header-h1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sub_title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.filter-navbar {
+  display: flex;
+  justify-content: center;
+}
+
+.filter-navbar-list {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 10rem;
+}
+
+.button-filter {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.container {
+  padding: 0;
+  width: 80%;
+  height: 100vh;
+  margin: 1em auto 0 auto;
+}
+.main-content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 150px);
+  width: 100%;
+}
+
+/* Atur ukuran untuk semua gambar */
+.main-content img {
+  width: 100%;
+  height: 100%;
+}
+
+.photo-1 {
+  grid-column: 3/4;
+  grid-row: 1/2;
+  object-fit: cover;
+}
+.photo-2 {
+  grid-column: 4/5;
+  grid-row: 1/2;
+}
+.photo-3 {
+  grid-column: 3/4;
+  grid-row: 2/3;
+}
+.photo-4 {
+  grid-column: 4/5;
+  grid-row: span 1;
+}
+.photo-5 {
+  grid-column: 2/3;
+  grid-row: 3/5;
+}
+.photo-6 {
+  grid-column: 1/2;
+  grid-row: 3/4;
+}
+.photo-7 {
+  grid-column: 1/2;
+  grid-row: 4/5;
+}
+
+.photo-0 {
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+
+.photo-8 {
+  grid-column: 3/5;
+  grid-row: 3/5;
+}
